feat: restore full project structure including media and templates

--- a/軟體產品需求概述.md
+++ b/軟體產品需求概述.md
@@ -1,6 +1,6 @@
 
 
-# 房東物件管理 語音AI 
+# 房東物件管理 AI 助手 
 
 ## 產品概述
 
@@ -66,6 +66,8 @@ AI助理：好的，合約已生成並發送給張先生進行電子簽署。
 
 
 
+## Functional Requirement（功能性需求）
+
 # Owner 頁面特色與功能說明:
 
 1. List Your Property  
@@ -98,47 +100,7 @@ AI助理：好的，合約已生成並發送給張先生進行電子簽署。
 2. [https://bananas.com.tw](https://bananas.com.tw)  
 3. https://wuohyeah.com/Plan.html
 
-   
-測試資料夾(Test Property Static Website Template):有一個房屋資料的Template範本:包括該房屋的文案介紹.md檔，照片、影片、VIC租賃合約、condition report…等。可供做個案template範本供你參考  
-
-依照資料夾內容，大致完成後的單一物業Template網頁如下:[https://a0405142777.wixsite.com/108-en-lease1](https://a0405142777.wixsite.com/108-en-lease1)
 
 
-開發框架:
-
-## 1. 核心 AI 語音與視訊 (AI Core)
-*   **Real-time Infrastructure (即時通訊底層)**: **LiveKit**
-    *   用途：處理 WebRTC 超低延遲影音傳輸、降噪、回音消除、網路連線管理。
-    *   優勢：開源、低延遲 (<200ms)、支援大規模併發，是目前 AI 語音互動的標準基礎設施。
-*   **Voice Agent Orchestration (語音助理協調層)**: **Vapi** (推薦) 或 **LiveKit Agents**
-    *   用途：處理 VAD (語音活動偵測)、打斷機制 (Interruption)、轉錄 (STT) 與合成 (TTS) 的串接。
-    *   策略：初期建議使用 **Vapi** 快速驗證市場，其內建的電話與網頁整合非常完善；中後期可轉為純 **LiveKit Agents** 以降低成本。
-*   **LLM (大語言模型)**: **OpenAI GPT-4o** 或 **Claude 3.5 Sonnet**
-    *   用途：處理複雜對話邏輯、情感分析、多語言支援。
-    *   微調策略：搭配 Prompt Engineering 與 RAG 技術，而非直接微調模型權重。
-*   **RAG (檢索增強生成)**: **Supabase pgvector** 或 **Pinecone**
-    *   用途：儲存「租賃法規」、「合約範本」、「維修報價單」等向量知識庫，讓 AI 回答具備法律依據與準確性。
-
-## 2. 前端與使用者介面 (Frontend)
-*   **Framework**: **Next.js 14+** (React)
-    *   用途：建構高效能、SEO 友善的 Web App (特別是 Landing Page 需要 SEO)。
-*   **UI Library**: **Tailwind CSS** + **Shadcn/UI**
-    *   用途：快速打造現代化、響應式、且美觀的 Dashboard 介面。
-*   **Client State**: **TanStack Query** (管理伺服器狀態) + **Zustand** (管理全域狀態)。
-
-## 3. 後端與資料庫 (Backend & Database)
-*   **BaaS (Backend-as-a-Service)**: **Supabase**
-    *   **Database**: PostgreSQL (關聯式資料庫，適合處理房產、租約、財務等結構化資料)。
-    *   **Auth**: 處理使用者註冊、登入 (原生支援 Google/Facebook OAuth 與手機驗證)。
-    *   **Storage**: 儲存房屋照片、合約 PDF、導覽影片。
-    *   **Edge Functions**: 處理簡單的後端邏輯。
-*   **Backend API**: **Python (FastAPI)** 或 **Node.js**
-    *   用途：處理複雜業務邏輯（如：自動生成符合 ATO 格式的報表、PDF 合約生成、複雜的費用計算）。
-
-## 4. 第三方服務整合 (Integrations)
-*   **Payments**: **Stripe Connect**
-    *   用途：支援平台分潤 (Platform Fees)、訂閱制收費、租金代收付 (Split Payments)。
-*   **Communications**: **Twilio** (簡訊 SMS) / **Resend** (Email 通知)。
-*   **Electronic Signature**: **DocuSign API** 或 **HelloSign** (合約電子簽署)。
 
 
