docs: update project architecture and diagrams

--- a/專案架構.md
+++ b/專案架構.md
@@ -1,53 +1,70 @@
 # 專案架構建議書 (Project Architecture Proposal)
 
 ## 1. 專案背景與目標
-本專案旨在開發一款「房東物件管理語音 AI App」，透過自然語言對話（語音/文字）協助房東處理從招租、篩選租客、簽約、維修到財務報表的一站式管理。核心競爭力在於高度自動化的 AI 助理與文件，網站生成能力。
+本專案旨在開發一款「房東物件管理語音 AI App」，透過自然語言對話（語音/文字）協助房東處理從招租、篩選租客、簽約、維修到財務報表的一站式管理。核心競爭力在於高度自動化的 AI 助理與文件、網站生成能力。
 
 ## 2. 技術棧選型 (Tech Stack)
 
-1. Web App 前後端框架:Expo https://docs.expo.dev/
-2. AI 語音助手開發框架https://github.com/RasaHQ/rasa
-3. 雲端server選型: 家用ＰＣ雲端server初期暫時會放在我家的一台Msi Desktop PC, 這一台PC的規格
-如下： 16核心64GB的Dram, RTX 3090 24G, ２個ＳＳＤ：４Ｔ＋１Ｔ
-4. Object Storage：https://github.com/minio/minio	Min.io 作為房東的物件照片,物件說明文檔,合約的存放空間，硬體設備就是我家的PC
-5. db:使用列式資料庫管理系統框架 https://github.com/ClickHouse/ClickHouse	Clickhouse.com，一樣架構在我家的PC裡面
+### 2.1 核心框架與基礎設施
+1.  **Web App 前後端框架**: [Expo](https://docs.expo.dev/)
+2.  **AI 語音助手開發框架**: [Rasa](https://github.com/RasaHQ/rasa)
+3.  **專案管理軟體**: [Vibe Kanban](https://www.vibekanban.com/docs)
+4.  **自架雲端 Server (初期硬體規格)**:
+    *   **主機**: MSI Desktop PC
+    *   **規格**: 16核心, 64GB DRAM, RTX 3090 24G
+    *   **儲存**: SSD 4T + 1T
+5.  **Object Storage**: [MinIO](https://github.com/minio/minio)
+    *   用途：作為房東的物件照片、物件說明文檔、合約的存放空間。
+    *   部署：架設於上述家用 PC。
+6.  **Database**: [ClickHouse](https://github.com/ClickHouse/ClickHouse)
+    *   用途：列式資料庫管理系統。
+    *   部署：架設於上述家用 PC。
 
-### AI 核心功能
-意圖檢測：大語言模型負責理解user的意圖、協助user生成文案、撰寫合約條款、分析財務數據,查詢資料庫、發送簡訊， Email等．
+### 2.2 AI 核心功能
+**意圖檢測**: 大語言模型負責理解 User 的意圖、協助生成文案、撰寫合約條款、分析財務數據、查詢資料庫、發送簡訊/Email 等。
 
-* 主要大語言模型：OpenAI GPT-4o
-* 備用大語言模型：Anthropic Claude 3.5 Sonnet...等
+*   **大語言模型 (LLM)**:
+    *   主要：OpenAI GPT-4o
+    *   備用：Anthropic Claude 3.5 Sonnet 等
+*   **語音轉文字 (Speech-to-Text, STT)**:
+    *   主要：使用手機內建 STT 功能 (iOS/Android)，將房東語音指令轉為文字。
+    *   備用：語音辨識工具包 [FunASR](https://github.com/alibaba-damo-academy/FunASR)
 
-Speech-to-Text (STT):
-主要使用：使用手機內建的STT功能，比如蘋果的語音辨識功能，Android的語音辨識功能，用來將房東的語音指令轉為文字。
-備用使用：語音辨識工具包 FunASR
+## 3. 專案架構 (AI Agents)
 
+根據使用者意圖，系統將任務指派給專門的 Sub-Agents：
 
+*   **Website Creator Agent (廣告網站建置代理人)**:
+    *   使用系統預設模板，建置房東的個人化租賃廣告網頁與 URL。
+    *   若房東已有網頁，亦可直接張貼其 URL。
+*   **Legal Agent (法務代理人)**:
+    *   專精於租賃法規，負責起草合約、審核條款。
+*   **Accountant Agent (會計代理人)**:
+    *   專精於稅務與財務，負責生成年度報稅報表、計算投報率等。
+*   **Concierge Agent (管家代理人)**:
+    *   負責聯繫維修師傅、安排看房行事曆。
 
-## 3. 專案架構
+### 3.1 智慧文件理解 (Intelligent Document Processing, IDP)
+針對「文件小幫手」功能，建立專屬的 Document Parsing Pipeline：
 
-根據使用者意圖，將任務指派給專門的 Sub-Agents：
-*   **Ｗebsite Creator Agent (廣告網站建置代理人) :** 使用系統預設的模板建置房東的個人化租賃廣告網頁＋URL。但如果房東已經有自己的網頁，可以把自己的網頁URL post上來即可。
-*   **Legal Agent (法務代理人):** 專精於租賃法規，負責起草合約、審核條款。
-*   **Accountant Agent (會計代理人):** 專精於稅務與財務，負責生成年度報稅時的報表、計算投報率等等。
-*   **Concierge Agent (管家代理人):** 負責聯繫維修師傅、安排看房行事曆。
-
-### 3.4 智慧文件理解 (Intelligent Document Processing, IDP)
-針對「文件小幫手」功能，建立專屬的 Document Parsing Pipeline。
-*   當使用者上傳權狀或舊合約時，系統自動透過有視覺能力或者有OCR辨識能力的大語言模型來提取關鍵欄位，比如所有權人姓名，地址，坪數大小等等，與提取完後截取重要資料自動填入資料庫，已減少人工輸入錯誤。（但如果資料有誤。可以手工修正）
-
+*   **自動化流程**: 當使用者上傳權狀或舊合約時，系統自動透過具備視覺 (Vision) 或 OCR 能力的大語言模型提取關鍵欄位。
+*   **關鍵欄位**: 所有權人姓名、地址、坪數大小等。
+*   **資料驗證**: 提取後自動填入資料庫以減少人工輸入錯誤（支援人工手動修正）。
 
 ## 4. 第三方服務整合 (Integrations)
-*   **Payments**: **Stripe Connect**
+
+*   **Payments (金流服務)**: **Stripe Connect**
     *   用途：
         *   **平台分潤 (Platform Fees)**：SaaS 平台收取的技術服務費。
         *   **多方分帳 (Split Payments)**：支援複雜資金分配（例如：房客付款後，系統自動分撥租金給房東、佣金給仲介、服務費給平台）。
         *   **訂閱制收費**：向使用者收取月費/年費。
-*   **Communications**: 
+
+*   **Communications (通訊服務)**:
     *   **主要服務**: **Twilio** (簡訊 SMS) / **Resend** (Email 通知)。
-    *   **備案：開源/自架備案**:
-        *   SMS: **Fonoster** (Twilio 開源替代品) 或 **Android SMS Gateway** (利用閒置手機發送簡訊)。
-        *   Email: **Postal** (自架郵件伺服器，類似 SendGrid) 或 **Listmonk** (電子報管理)。
-*   **Electronic Signature**: 
+    *   **開源/自架備案**:
+        *   **SMS**: [Fonoster](https://github.com/fonoster/fonoster) (Twilio 開源替代品) 或 **Android SMS Gateway** (利用閒置手機發送簡訊)。
+        *   **Email**: [Postal](https://github.com/postalhq/postal) (自架郵件伺服器) 或 [Listmonk](https://listmonk.app/) (電子報管理)。
+
+*   **Electronic Signature (電子簽章)**:
     *   **主要服務 (開源/自架)**: **DocuSeal** (推薦，介面現代且功能完整，無合約數量限制)。
     *   **備用服務 (SaaS)**: **HelloSign** (若需第三方認證服務時使用)。
