docs: 重構專案文檔與配置文件
- 拆分產品概述、使用者場景與功能分階段開發計劃
- 新增軟體架構與硬體架構選型說明書
- 新增房屋資料準備手冊與房客預約看房須知
- 更新環境變數配置與 MCP 服務器設定
- 整理 .gitignore 排除敏感文件
- 移除過時文檔與測試文件

--- a/docs/資料庫選型建議.md
+++ b/docs/資料庫選型建議.md
@@ -1,6 +1,37 @@
 # 資料庫選型建議書
 
-## 問題分析
+## ✅ 最終決策：採用 Supabase
+
+基於專案需求分析，我們決定採用 **Supabase** 作為後端解決方案。
+
+### 選擇 Supabase 的核心原因
+
+1. **完整的 BaaS 功能**
+   - PostgreSQL 資料庫（強大的 JSONB 支援）
+   - 檔案儲存（Storage）
+   - 身份驗證（Authentication）
+   - 即時訂閱（Realtime）
+   - 無伺服器函數（Edge Functions）
+
+2. **開發效率極高**
+   - 無需自建後端 API
+   - 自動生成 REST/GraphQL API
+   - Row Level Security (RLS) 內建多租戶支援
+   - 本地開發環境完善（Docker）
+
+3. **成本優勢**
+   - 開發階段：完全免費（本地 Docker）
+   - 測試階段：免費方案（500MB 資料庫、1GB 儲存）
+   - 正式環境：$25/月起（8GB 資料庫、100GB 儲存）
+
+4. **擴展性佳**
+   - 從免費到企業方案無縫升級
+   - 支援自架部署（完全掌控）
+   - PostgreSQL 生態系統完整
+
+---
+
+## 原始問題分析
 
 ### 原始方案：使用 ClickHouse 儲存謄本 PDF 解析後的 JSON
 
@@ -21,59 +52,170 @@
 4. **快速查詢**：生成物件廣告頁面需要快速讀取完整物件資訊
 5. **分析查詢**：財務報表、統計分析（次要需求）
 
-## 建議方案
+---
 
-### 方案一：PostgreSQL 作為主資料庫（推薦）
+## Supabase (PostgreSQL) 方案詳解
 
-**適用場景：**
-- 日常的物件資料管理
-- 謄本 JSON 資料儲存與查詢
-- 物件與照片的關聯查詢
-- 生成物件廣告頁面
+### 適用場景
+- ✅ 日常的物件資料管理
+- ✅ 謄本 JSON 資料儲存與查詢
+- ✅ 物件與照片的關聯查詢
+- ✅ 生成物件廣告頁面
+- ✅ 多租戶資料隔離（RLS）
+- ✅ 即時資料訂閱
 
-**優勢：**
-1. **JSONB 強大功能**：
-   ```sql
-   -- 儲存謄本解析結果
-   CREATE TABLE building_transcripts (
-       id SERIAL PRIMARY KEY,
-       property_id INTEGER REFERENCES properties(id),
-       transcript_data JSONB,  -- 完整的謄本解析 JSON
-       created_at TIMESTAMP DEFAULT NOW()
-   );
-   
-   -- 強大的 JSON 查詢
-   SELECT transcript_data->>'address' as address,
-          transcript_data->>'total_area' as area
-   FROM building_transcripts
-   WHERE transcript_data @> '{"district": "信義區"}';
-   
-   -- JSON 索引支援
-   CREATE INDEX idx_transcript_address ON building_transcripts 
-   USING GIN (transcript_data jsonb_path_ops);
-   ```
+### 技術優勢
 
-2. **優秀的關聯查詢**：
-   ```sql
-   -- 查詢物件完整資訊（包含照片）
-   SELECT 
-       p.*,
-       json_agg(ph.*) as photos,
-       bt.transcript_data as building_info
-   FROM properties p
-   LEFT JOIN photos ph ON ph.property_id = p.id
-   LEFT JOIN building_transcripts bt ON bt.property_id = p.id
-   WHERE p.id = 123;
-   ```
+#### 1. JSONB 強大功能
+```sql
+-- 儲存謄本解析結果
+CREATE TABLE properties (
+    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+    agent_id UUID REFERENCES auth.users(id),
+    address TEXT NOT NULL,
+    district TEXT,
+    total_area NUMERIC,
+    transcript_data JSONB,  -- 完整的謄本解析 JSON
+    created_at TIMESTAMPTZ DEFAULT NOW(),
+    updated_at TIMESTAMPTZ DEFAULT NOW()
+);
 
-3. **ACID 事務支援**：資料更新、修正操作安全可靠
+-- 強大的 JSON 查詢
+SELECT 
+    id,
+    address,
+    transcript_data->>'owner_name' as owner_name,
+    transcript_data->>'total_area' as area
+FROM properties
+WHERE transcript_data @> '{"district": "信義區"}';
 
-4. **單筆查詢效能佳**：適合生成廣告頁面
+-- JSON 索引支援
+CREATE INDEX idx_transcript_data 
+ON properties USING GIN (transcript_data jsonb_path_ops);
+```
 
-### 方案二：PostgreSQL + ClickHouse 混合架構（進階）
+#### 2. Row Level Security (RLS) - 多租戶隔離
+```sql
+-- 啟用 RLS
+ALTER TABLE properties ENABLE ROW LEVEL SECURITY;
+
+-- 仲介只能看到自己的物件
+CREATE POLICY "仲介只能查看自己的物件"
+    ON properties FOR SELECT
+    USING (auth.uid() = agent_id);
+
+CREATE POLICY "仲介只能新增自己的物件"
+    ON properties FOR INSERT
+    WITH CHECK (auth.uid() = agent_id);
+```
+
+#### 3. 優秀的關聯查詢
+```sql
+-- 查詢物件完整資訊（包含照片）
+SELECT 
+    p.*,
+    json_agg(ph.*) as photos,
+    p.transcript_data as building_info
+FROM properties p
+LEFT JOIN property_photos ph ON ph.property_id = p.id
+WHERE p.id = '123'
+GROUP BY p.id;
+```
+
+#### 4. Supabase 額外功能
+```typescript
+// 前端直接查詢，無需建立 API
+import { createClient } from '@supabase/supabase-js'
+
+const supabase = createClient(supabaseUrl, supabaseKey)
+
+// 查詢物件
+const { data, error } = await supabase
+  .from('properties')
+  .select(`
+    *,
+    property_photos (*)
+  `)
+  .eq('agent_id', userId)
+  .order('created_at', { ascending: false })
+
+// 即時訂閱
+supabase
+  .channel('properties')
+  .on('postgres_changes', 
+    { event: 'INSERT', schema: 'public', table: 'properties' },
+    (payload) => console.log('新物件:', payload)
+  )
+  .subscribe()
+
+// 檔案上傳
+const { data, error } = await supabase.storage
+  .from('property-photos')
+  .upload(`${propertyId}/photo.jpg`, file)
+```
+
+### 部署選項
+
+#### 選項 1: Supabase Cloud（推薦）
+```bash
+# 優點
+✅ 即開即用，無需維護
+✅ 自動備份
+✅ 自動擴展
+✅ 免費方案可開始
+
+# 成本
+- 免費: 500MB DB, 1GB Storage
+- Pro: $25/月, 8GB DB, 100GB Storage
+- Team: $599/月, 無限 DB
+```
+
+#### 選項 2: 自架 Supabase（進階）
+```bash
+# 使用 Docker Compose
+git clone https://github.com/supabase/supabase
+cd supabase/docker
+cp .env.example .env
+
+# 修改配置
+# 啟動
+docker-compose up -d
+
+# 優點
+✅ 完全掌控
+✅ 可部署到自己的伺服器
+✅ 無資料傳輸費用
+
+# 缺點
+❌ 需要維護
+❌ 需要自己設定備份
+❌ 需要監控和更新
+```
+
+#### 選項 3: 本地開發
+```bash
+# 使用 Supabase CLI
+npm install -g supabase
+supabase init
+supabase start
+
+# 本地服務
+API: http://localhost:54321
+Studio: http://localhost:54323
+DB: postgresql://postgres:postgres@localhost:54322/postgres
+```
+
+---
+
+## 替代方案：PostgreSQL + ClickHouse 混合架構（不推薦）
+
+**僅在以下情況考慮：**
+- 有專職 DevOps 團隊
+- 需要複雜的財務分析（> 10萬筆交易）
+- 已有 ClickHouse 經驗
 
 **架構設計：**
-- **PostgreSQL**：主資料庫（OLTP）
+- **Supabase PostgreSQL**：主資料庫（OLTP）
   - 儲存所有業務資料
   - 處理日常查詢與更新
   
@@ -81,23 +223,132 @@
   - 從 PostgreSQL 定期同步資料
   - 僅用於財務報表、統計分析
 
-**資料同步流程：**
-```
-PostgreSQL (主資料庫)
-    ↓ (定期 ETL)
-ClickHouse (分析資料庫)
-    ↓
-財務報表查詢
+**注意：**
+- ⚠️ 增加系統複雜度
+- ⚠️ 需要額外維護成本
+- ⚠️ 初期不建議使用
+
+---
+
+## 決策建議
+
+### 階段一：本地開發（現在）
+```bash
+✅ 使用 Supabase CLI 本地環境
+- 完全免費
+- Docker 一鍵啟動
+- 與正式環境一致
 ```
 
-**適用場景：**
-- 需要複雜的財務分析
-- 跨物件統計查詢
-- 市場趨勢分析
+### 階段二：測試上線（1-3 個月）
+```bash
+✅ Supabase Cloud 免費方案
+- 無需配置
+- 500MB 資料庫足夠 MVP
+- 隨時可升級
+```
 
-**注意事項：**
-- 初期可以只用 PostgreSQL
-- 當分析需求增加時再引入 ClickHouse
+### 階段三：正式營運（3 個月後）
+```bash
+✅ Supabase Cloud Pro ($25/月)
+- 8GB 資料庫
+- 100GB 儲存
+- 每日自動備份
+- 優先支援
+```
+
+### 未來擴展（1 年後，可選）
+```bash
+⚠️ 考慮自架 Supabase
+- 當月成本 > $500
+- 需要特殊合規要求
+- 有專職運維團隊
+```
+
+---
+
+## 與其他方案對比
+
+| 項目 | Supabase | PocketBase | NestJS + PostgreSQL |
+|------|----------|------------|-------------------|
+| 開發速度 | ⭐⭐⭐⭐⭐ | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ |
+| 功能完整度 | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | ⭐⭐⭐⭐⭐ |
+| 擴展性 | ⭐⭐⭐⭐⭐ | ⭐⭐ | ⭐⭐⭐⭐⭐ |
+| 學習曲線 | ⭐⭐⭐⭐ | ⭐⭐⭐⭐⭐ | ⭐⭐ |
+| 維護成本 | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | ⭐⭐ |
+| 初期成本 | 免費 | 免費 | VPS $10/月 |
+| 正式成本 | $25/月 | VPS $10/月 | VPS $50/月 |
+
+**結論：** Supabase 在開發速度、功能完整度和維護成本上最優。
+
+---
+
+## 常見問題
+
+### Q: Supabase 和 Firebase 的差異？
+**A:** 
+- Supabase 使用 PostgreSQL（關聯式）vs Firebase 使用 NoSQL
+- Supabase 開源 vs Firebase 閉源
+- Supabase 支援 SQL 查詢 vs Firebase 查詢能力有限
+- Supabase 可自架 vs Firebase 只能用 Google Cloud
+
+### Q: 如果 Supabase 倒閉怎麼辦？
+**A:**
+- ✅ 開源專案，可自架
+- ✅ 標準 PostgreSQL，資料可匯出
+- ✅ 社群活躍，有替代方案（Nhost、PocketBase）
+
+### Q: 資料量很大時怎麼辦？
+**A:**
+- Supabase 支援擴展到 TB 級別
+- 可使用 PostgreSQL 分區表
+- 可升級到 Team/Enterprise 方案
+- 最終可自架 PostgreSQL 叢集
+
+### Q: 需要離線功能怎麼辦？
+**A:**
+```typescript
+// 使用 Supabase + 本地快取
+import { createClient } from '@supabase/supabase-js'
+import AsyncStorage from '@react-native-async-storage/async-storage'
+
+const supabase = createClient(url, key, {
+  auth: {
+    storage: AsyncStorage,
+    autoRefreshToken: true,
+    persistSession: true
+  }
+})
+
+// 或使用 expo-sqlite 本地資料庫
+import * as SQLite from 'expo-sqlite'
+```
+
+---
+
+## 結論
+
+✅ **採用 Supabase 作為後端解決方案**
+
+**核心理由：**
+1. PostgreSQL JSONB 完美符合謄本資料儲存需求
+2. Row Level Security 天生支援多租戶 SaaS
+3. 開發效率極高，無需建立傳統後端 API
+4. 成本低（免費起步，$25/月正式營運）
+5. 可隨時遷移到自架方案
+
+**下一步：**
+- [ ] 安裝 Supabase CLI
+- [ ] 啟動本地開發環境
+- [ ] 建立資料庫 Schema
+- [ ] 整合到前端專案
+- [ ] 查閱[三階段部署說明](./三階段部署說明.md)
+
+---
+
+**最後更新：** 2026-01-12  
+**決策狀態：** ✅ 已確認  
+**負責人：** Owner Real Estate Agent SaaS Team
 - 需要額外的 ETL 流程維護成本
 
 ## 資料庫架構設計建議
